--- a/style.css
+++ b/style.css
@@ -2,3 +2,90 @@
   margin: 0%;
   padding: 0%;
 }
+
+.container {
+  background-image: url("https://images.unsplash.com/photo-1431440869543-efaf3388c585?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-blend-mode: blur(100vh);
+}
+
+img {
+  object-fit: cover;
+}
+
+.button {
+  padding: 10px 15px;
+  font-family: "roboto slab";
+  font-size: 34px;
+  font-weight: 700;
+  border-radius: 10px;
+  background-color: rgb(54, 23, 54);
+  color: #fff;
+  outline: none;
+  cursor: pointer;
+}
+
+.pop-up {
+  background-color: white;
+  border-radius: 10px;
+  width: 400px;
+  height: 250px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(0.1);
+  transition: transform 0.4s, top 0.4s;
+  text-align: center;
+  padding: 0px 30px 30px;
+  color: #333;
+  visibility: visible !important;
+}
+.popup {
+  visibility: hidden;
+  position: absolute;
+  top: 50%;
+  transform: translate(-50%, -50%) scale(1);
+}
+
+.pop-up img {
+  margin-top: -50px;
+  border-radius: 80%;
+  position: absolute;
+  top: -2%;
+  left: 40%;
+  width: 100px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+}
+
+.pop-up h1 {
+  font-family: "roboto slab";
+  font-size: 32px;
+  font-weight: 700;
+  padding: 40px 0px;
+}
+
+.pop-up p {
+  font-family: "roboto slab";
+  font-size: 500;
+  font-weight: 34px;
+  padding: 10px 0px;
+}
+
+.btn {
+  padding: 10px 15px;
+  font-family: "roboto slab";
+  font-size: 34px;
+  font-weight: 700;
+  border-radius: 40px;
+  background-color: rgb(91, 181, 209);
+  color: #fff;
+  cursor: pointer;
+  width: 100%;
+  height: 70px;
+}
