--- a/style.css
+++ b/style.css
@@ -29,6 +29,8 @@ img {
   color: #fff;
   outline: none;
   cursor: pointer;
+  border: none;
+  border: 2px solid rgb(251, 250, 251);
 }
 
 .pop-up {
@@ -88,4 +90,10 @@ img {
   cursor: pointer;
   width: 100%;
   height: 70px;
+}
+
+@media only screen and (min-width: 768px) {
+  .pop-up {
+    width: 300px;
+  }
 }
